# diplom

./: .env.bstack  .env.local_emulator  README.md  application.py  config.py  conftest.py  pyproject.toml  pytest.ini
data/: common_data.py  resources.py
data/schemas/: add_product_to_cart.json  info_about_stores_for_product.json  storelocator.json
tests/: conftest.py
tests/api_tests/: test_add_product_to_cart.py  test_delete_order.py  test_get_info_about_stores_for_product.py  test_storelocator.py  test_update_quantity_of_product.py
tests/api_tests/api_helper/: add_product_in_cart.py  requests.py
tests/mobile_tests/: conftest.py  test_authorization_unregistered_user_by_password.py  test_go_to_megafone.py  test_link_nearest_offices.py  test_no_access_to_sim_card_link.py
tests/ui_tests/: conftest.py  test_add_product_to_cart.py  test_delete_product.py  test_filter_smartphone_by_name_iphone.py  test_information_about_contacts.py  test_main_page_header_should_have_links.py  test_private individuals_should_have_chapter_links.py  test_private_individuals_should_have_services_links.py  test_search.py
tests/ui_tests/pages/: cart_page.py  main_page.py  private_individuals_page.py  smartphone_page.py
utils/: attach.py
