[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Vladimir Krinitsyn <Premio1896@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc8"
webdriver-manager = "4.0.2"
pytest = ">=8.3.3,<8.4.0"
requests = "2.32.3"
allure-pytest = "2.13.5"
pydantic = "2.10.2"
pydantic-settings = "2.7.0"
jsonschema = "4.23.0"
appium-python-client = "4.4.0"
python-dotenv = "1.0.1"
pathlib = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
